# ImGuizmo-CMAKE

./: CMakeLists.txt  ImSequencer.cpp
cmake/: ImGuizmoConfig.cmake.in
example/: ImGuizmoSample.vcxproj  imgui.ini  main.cpp
example/ImGuizmoSample/x64/Debug/: ImGuizmoSample.exe.recipe  vc143.idb
example/ImGuizmoSample/x64/Debug/ImGuizmoSample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ImGuizmoSample.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
